[project]
name = "travel-task1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.1",
    "google-adk[extensions]>=2.3.0",
    "google-genai>=2.10.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
